--- a/EmergencyResponseSite/website/templates/website/index.html
+++ b/EmergencyResponseSite/website/templates/website/index.html
@@ -48,15 +48,15 @@
 
     <title>Grayscale - Start Bootstrap Theme</title>
     <!-- Bootstrap core CSS -->
-    <link href="{% static "vendor/bootstrap/css/bootstrap.min.css" %}" rel="stylesheet">
+    <link href="{% static "website/vendor/bootstrap/css/bootstrap.min.css" %}" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
-    <link href="{% static "vendor/font-awesome/css/font-awesome.min.css" %}" rel="stylesheet" type="text/css">
+    <link href="{% static "website/vendor/font-awesome/css/font-awesome.min.css" %}" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Cabin:700' rel='stylesheet' type='text/css'>
 
     <!-- Custom styles for this template -->
-    <link href="{% static "css/grayscale.min.css" %}" rel="stylesheet">
+    <link href="{% static "website/css/grayscale.min.css" %}" rel="stylesheet">
 
   </head>
 
@@ -36088,15 +36088,15 @@ src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCy2ieyQ18TM0_V2rpLj7M2rSU
     </footer>
 
     <!-- Bootstrap core JavaScript -->
-    <script src="{% static "vendor/jquery/jquery.min.js" %}" ></script>
-    <script src="{% static "vendor/bootstrap/js/bootstrap.bundle.min.js" %}"></script>
+    <script src="{% static "website/vendor/jquery/jquery.min.js" %}" ></script>
+    <script src="{% static "website/vendor/bootstrap/js/bootstrap.bundle.min.js" %}"></script>
 
     <!-- Plugin JavaScript -->
-    <script src="{% static "vendor/jquery-easing/jquery.easing.min.js" %}"></script>
+    <script src="{% static "website/vendor/jquery-easing/jquery.easing.min.js" %}"></script>
 
 
     <!-- Custom scripts for this template -->
-    <script src="{% static "js/grayscale.min.js" %}"></script>
+    <script src="{% static "website/js/grayscale.min.js" %}"></script>
 
     <form action="/website/" method="post">
       {% csrf_token %}
