Fixing website issues

--- a/EmergencyResponseSite/website/templates/website/index.html
+++ b/EmergencyResponseSite/website/templates/website/index.html
@@ -117,21 +117,22 @@
             <p></p>
           </div>
           <div class="col-lg-18 mx-auto">
-              <img src="./img/number-dispatches.jpg"
+              <img src="{% static "website/img/number-dispatches.jpg" %}"
                width="375"
                height="250">
-              <img src="./img/dispatch-incidents.jpg"
+              <img src="{% static "website/img/dispatch-incidents.jpg" %}"
                width="375"
                height="250">
-              <img src="./img/als-frequency.jpg"
+              <img src="{% static "website/img/als-frequency.jpg" %}"
                width="375"
                height="250">
           <h2></h2>
           <h2><center>Frequency of Incidents (Call Types)</center></h2>
-              <img src="./img/marker-map-key.jpg"
-              width="800"
+              <img src="{% static "website/img/marker-map-key.jpg %}"
+              width="600"
               height="100">
           </div>
+           <link href="{% static "website/vendor/bootstrap/css/bootstrap.min.css" %}" rel="
 
 
 <script>
