Fixing website issues

--- a/EmergencyResponseSite/website/templates/website/index.html
+++ b/EmergencyResponseSite/website/templates/website/index.html
@@ -128,7 +128,7 @@
                height="250">
           <h2></h2>
           <h2><center>Frequency of Incidents (Call Types)</center></h2>
-              <img src="{% static "website/img/marker-map-key.jpg %}"
+              <img src="{% static "website/img/marker-map-key.jpg" %}"
               width="600"
               height="100">
           </div>
