Fixing website issues

--- a/EmergencyResponseSite/website/templates/website/index.html
+++ b/EmergencyResponseSite/website/templates/website/index.html
@@ -40,7 +40,7 @@
       }
     </style>
 
-    <link rel="stylesheet" type="text/css" href="css/CSSMarkerMap.css">
+    <link rel="stylesheet" type="text/css" href="{% static "website/css/CSSMarkerMap.css" %}">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
