--- a/EmergencyResponseSite/website/templates/website/index.html
+++ b/EmergencyResponseSite/website/templates/website/index.html
@@ -132,7 +132,7 @@
               width="600"
               height="100">
           </div>
-           <link href="{% static "website/vendor/bootstrap/css/bootstrap.min.css" %}" rel="
+           <link href="{% static "website/vendor/bootstrap/css/bootstrap.min.css" %}" rel="stylesheet">
 
 
 <script>
