--- a/EmergencyResponseSite/website/templates/website/index.html
+++ b/EmergencyResponseSite/website/templates/website/index.html
@@ -36042,6 +36042,7 @@ src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCy2ieyQ18TM0_V2rpLj7M2rSU
             <input id="time" type="text" name="time" value="{{ current_time }}"/> <br>
             <input type="submit" value="OK" />
           </form> 
+          <p>{{probabilities}}</p>
         </div>
       </div>
     </section>
