Fixing website issues

--- a/EmergencyResponseSite/website/templates/website/index.html
+++ b/EmergencyResponseSite/website/templates/website/index.html
@@ -36053,7 +36053,9 @@ src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCy2ieyQ18TM0_V2rpLj7M2rSU
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2>Contact Start Bootstrap</h2>
-            <p>{{ most_likely }}</p>
+              <img src="{% static "website/img/number-dispatches.jpg" %}"
+                 width="375"
+                 height="250">
           </div>
         </div>
       </div>
