--- a/EmergencyResponseSite/website/templates/website/index.html
+++ b/EmergencyResponseSite/website/templates/website/index.html
@@ -36052,7 +36052,7 @@ src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCy2ieyQ18TM0_V2rpLj7M2rSU
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2>Contact Start Bootstrap</h2>
+            <h2 style="color:white;">Longest Dispatch Times By Zip Code</h2>
               <img src="{% static "website/img/sf-zip-map.jpg" %}"
                  width="475"
                  height="375">
