Fixing website issues

--- a/EmergencyResponseSite/website/templates/website/index.html
+++ b/EmergencyResponseSite/website/templates/website/index.html
@@ -113,7 +113,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-9 mx-auto">
-            <h2>San Francisco Dispatch Trends and Metrics</h2>
+            <h2 style="color:white;">San Francisco Dispatch Trends and Metrics</h2>
             <p></p>
           </div>
           <div class="col-lg-18 mx-auto">
@@ -127,7 +127,7 @@
                width="375"
                height="250">
           <h2></h2>
-          <h2><center>Frequency of Incidents (Call Types)</center></h2>
+          <h2 style="color:white;"><center>Frequency of Incidents (Call Types)</center></h2>
               <img src="{% static "website/img/marker-map-key.jpg" %}"
               width="600"
               height="100">
