Fixing website issues

--- a/EmergencyResponseSite/website/templates/website/index.html
+++ b/EmergencyResponseSite/website/templates/website/index.html
@@ -36043,6 +36043,7 @@ src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCy2ieyQ18TM0_V2rpLj7M2rSU
             <input type="submit" value="OK" />
           </form> 
           <p>{{ probabilities }}</p>
+          <p>{{ most_likely }}</p>
         </div>
       </div>
     </section>
