Fixing website issues

--- a/EmergencyResponseSite/website/templates/website/index.html
+++ b/EmergencyResponseSite/website/templates/website/index.html
@@ -36026,6 +36026,7 @@ src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCy2ieyQ18TM0_V2rpLj7M2rSU
               <img src="{% static "website/img/sf-zip-map.jpg" %}"
                  width="475"
                  height="375">
+                 <p>Longest Dispatch Times: 94110: 0:20:27, 94107: 0:23:49, 94109: 0:24:32, 94122: 0:26:17, 94103: 0:29:17</p>
           </div>
         </div>
       </div>
