Fixing website issues

--- a/EmergencyResponseSite/website/templates/website/index.html
+++ b/EmergencyResponseSite/website/templates/website/index.html
@@ -36021,12 +36021,15 @@ src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCy2ieyQ18TM0_V2rpLj7M2rSU
     <section id="contact" class="content-section text-center">
       <div class="container">
         <div class="row">
-          <div class="col-lg-8 mx-auto">
+          <div class="col-lg-14 mx-auto">
             <h2 style="color:white;">Longest Dispatch Times By Zip Code</h2>
               <img src="{% static "website/img/sf-zip-map.jpg" %}"
                  width="475"
                  height="375">
-                 <p>Longest Dispatch Times: 94110: 0:20:27, 94107: 0:23:49, 94109: 0:24:32, 94122: 0:26:17, 94103: 0:29:17</p>
+                 <p style="color:white;"">Longest Dispatch Times: 94110: 0:20:27, 94107: 0:23:49, 94109: 0:24:32, 94122: 0:26:17, 94103: 0:29:17</p>
+              <img src="{% static "website/img/heat-map.jpg" %}"
+                  width="475"
+                  height=375">
           </div>
         </div>
       </div>
