Fixing website issues

--- a/EmergencyResponseSite/website/templates/website/index.html
+++ b/EmergencyResponseSite/website/templates/website/index.html
@@ -36027,6 +36027,7 @@ src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCy2ieyQ18TM0_V2rpLj7M2rSU
                  width="475"
                  height="375">
                  <p style="color:white;"">Longest Dispatch Times: 94110: 0:20:27, 94107: 0:23:49, 94109: 0:24:32, 94122: 0:26:17, 94103: 0:29:17</p>
+                <h2 style="color:white;">Heatmap of Dispatches</h2>
               <img src="{% static "website/img/heat-map.jpg" %}"
                   width="475"
                   height=375">
